--- a/shippable.yml
+++ b/shippable.yml
@@ -29,7 +29,7 @@ build:
     - mkdir -p shippable/codecoverage
     - mvn install
     - cp -r target shippable/codecoverage
-    - git push -f git@heroku.com:$APP_NAME.git master//heroku without toolbelt
+    - git push -f git@heroku.com:$APP_NAME.git master #heroku without toolbelt
   cache: true
   cache_dir_list: 
     - $SHIPPABLE_BUILD_DIR/shippable.yml
