--- a/shippable.yml
+++ b/shippable.yml
@@ -30,7 +30,7 @@ build:
     - mvn install
     - cp -r target shippable/codecoverage
     
-    #- git push -f git@heroku.com:$APP_NAME.git master #heroku without toolbelt
+    - git push -f git@heroku.com:$APP_NAME.git master #heroku without toolbelt
   cache: true
   cache_dir_list: 
     - $SHIPPABLE_BUILD_DIR/shippable.yml
