--- a/shippable.yml
+++ b/shippable.yml
@@ -42,7 +42,7 @@ integrations:
         #- "#sreya"
         - "#random" 
         - "#public-chnl" 
-      on_start: always
+      #on_start: always
       on_success: always
       on_failure: always
       on_pull_request: always 
@@ -61,7 +61,7 @@ integrations:
           #- sreya
         - shiptest.rc.ow@gmail.com
         - shiptest.rc.me@gmail.com
-      on_start: always
+      #on_start: always
       on_success: always 
       on_failure: always 
        
@@ -71,7 +71,7 @@ integrations:
       recipients:
         - "chat.freenode.net#test-irc"
         - "chat.freenode.net#test1-irc"
-      on_start: always
+      #on_start: always
       on_success: always      
       on_failure: always   
     
@@ -82,7 +82,7 @@ integrations:
         - '#shiptestpvt'
      # - '#Pillar%20of%20Autumn'
         - '@shiphitchcock1'
-      on_start: always
+      #on_start: always
       on_success: always
       on_failure: always
       
