--- a/shippable.yml
+++ b/shippable.yml
@@ -92,7 +92,7 @@ integrations:
         - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
         - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
         
-    - integrationName: generic-webhhok
+    - integrationName: generic-webhook
       type: webhook
       payload:
         - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
