--- a/shippable.yml
+++ b/shippable.yml
@@ -29,7 +29,7 @@ build:
     - mkdir -p shippable/codecoverage
     - mvn install
     - cp -r target shippable/codecoverage
-   
+    - thy
     
    # - git push -f git@heroku.com:$APP_NAME.git master #heroku without toolbelt
   cache: true
@@ -87,16 +87,16 @@ integrations:
       on_success: always
       on_failure: always
      
-   # - integrationName: generic-webhook  
-   #   type: webhook
-   #   payload:
-   #     - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
-   #     - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
+  #  - integrationName: generic-webhook  
+  #    type: webhook
+  #    payload:
+  #      - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
+  #      - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
         
     - integrationName: project-trigger
       type: webhook
       payload:
         - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
-      on_start: always
+   #   on_start: always
       on_success: always
       on_failure: always
