--- a/shippable.yml
+++ b/shippable.yml
@@ -29,6 +29,7 @@ build:
     - mkdir -p shippable/codecoverage
     - mvn install
     - cp -r target shippable/codecoverage
+    - sleep 5m
     
    # - git push -f git@heroku.com:$APP_NAME.git master #heroku without toolbelt
   cache: true
