--- a/shippable.yml
+++ b/shippable.yml
@@ -87,11 +87,14 @@ integrations:
       on_success: always
       on_failure: always
      
-  #  - integrationName: generic-webhook  
-  #    type: webhook
-  #    payload:
-  #      - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
-  #      - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
+    - integrationName: generic-webhook  
+      type: webhook
+      payload:
+        - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
+        - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
+      on_start: always
+      on_success: always
+      on_failure: always
         
     - integrationName: project-trigger
       type: webhook
