--- a/shippable.yml
+++ b/shippable.yml
@@ -100,6 +100,6 @@ integrations:
       type: webhook
       payload:
         - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
-   #   on_start: always
+      on_start: always
       on_success: always
       on_failure: always
