--- a/shippable.yml
+++ b/shippable.yml
@@ -13,15 +13,15 @@ matrix:
     - jdk: oraclejdk8
       env:
         - test2=genexec2
-  #  - jdk: openjdk7
-   #   env: ship@=test
+    - jdk: openjdk7
+      env: ship@=test
   exclude:
     - jdk: oraclejdk7
       env:
         - APP_NAME=qhodeheroku2  
       #  - test1=genexec1
- # allow_failures:
-  #  - jdk: openjdk7
+  allow_failures:
+    - jdk: openjdk7
 build:
   advancedReporting: true
   ci:
@@ -32,9 +32,9 @@ build:
 
     
    # - git push -f git@heroku.com:$APP_NAME.git master #heroku without toolbelt
- # cache: true
- # cache_dir_list: 
-  #  - $SHIPPABLE_BUILD_DIR/shippable.yml
+  cache: true
+  cache_dir_list: 
+    - $SHIPPABLE_BUILD_DIR/shippable.yml
 integrations:    
   notifications:
     - integrationName: ship-slack 
