--- a/shippable.yml
+++ b/shippable.yml
@@ -87,7 +87,7 @@ integrations:
       on_success: always
       on_failure: always   
         
-    - integrationName: project-trigger
+    - integrationName: project-trigger #samplNod project in shiptest-rc-ow will trigger
       type: webhook
       payload:
         - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
