--- a/shippable.yml
+++ b/shippable.yml
@@ -13,15 +13,15 @@ matrix:
     - jdk: oraclejdk8
       env:
         - test2=genexec2
-    - jdk: openjdk7
-      env: ship@=test
+  #  - jdk: openjdk7
+  #    env: ship@=test
   exclude:
     - jdk: oraclejdk7
       env:
         - APP_NAME=qhodeheroku2  
       #  - test1=genexec1
-  allow_failures:
-    - jdk: openjdk7
+  #allow_failures:
+   # - jdk: openjdk7
 build:
   advancedReporting: true
   ci:
