--- a/shippable.yml
+++ b/shippable.yml
@@ -23,16 +23,16 @@ matrix:
   allow_failures:
     - jdk: openjdk7
 build:
-  advancedReporting: true
+  #advancedReporting: true
   ci:
     # Create folders for test and code coverage
     - mkdir -p shippable/codecoverage
     - mvn install
     - cp -r target shippable/codecoverage
     
-  cache: false
-  cache_dir_list: 
-    - $SHIPPABLE_BUILD_DIR/shippable.yml
+  #cache: false
+  #cache_dir_list: 
+    #- $SHIPPABLE_BUILD_DIR/shippable.yml
 integrations:    
   notifications:
     - integrationName: ship-slack 
