--- a/shippable.yml
+++ b/shippable.yml
@@ -30,9 +30,9 @@ build:
     - mvn install
     - cp -r target shippable/codecoverage
     
-  #cache: false
-  #cache_dir_list: 
-    #- $SHIPPABLE_BUILD_DIR/shippable.yml
+  cache: true
+  cache_dir_list: 
+    - $SHIPPABLE_BUILD_DIR/shippable.yml
 integrations:    
   notifications:
     - integrationName: ship-slack 
