--- a/shippable.yml
+++ b/shippable.yml
@@ -90,7 +90,8 @@ integrations:
     - integrationName: project-trigger #samplNod project in shiptest-rc-ow will trigger
       type: webhook
       payload:
-        - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
+       # - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
+        - BUILD_NUM=$SHIPPABLE_BUILD_NUMBER
       on_start: always
       on_success: always
       on_failure: always
