--- a/shippable.yml
+++ b/shippable.yml
@@ -92,6 +92,8 @@ integrations:
       payload:
        # - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
         - BUILD_NUM=$SHIPPABLE_BUILD_NUMBER
+        - FOO=FUBU
+        - GOO=GUBU
       on_start: always
       on_success: always
       on_failure: always
