--- a/shippable.yml
+++ b/shippable.yml
@@ -30,7 +30,7 @@ build:
     - mvn install
     - cp -r target shippable/codecoverage
     - docker ps
-    
+    - thyu
   cache: true
  # cache_dir_list: 
  #   - $SHIPPABLE_BUILD_DIR/shippable.yml
