--- a/shippable.yml
+++ b/shippable.yml
@@ -23,6 +23,7 @@ matrix:
   allow_failures:
     - jdk: openjdk7
     - jdk: oraclejdk7
+    - jdk: oraclejdk8
 
 build:
   #advancedReporting: true
