--- a/shippable.yml
+++ b/shippable.yml
@@ -1,9 +1,9 @@
 language: java
 
 jdk:
-  - openjdk6
+  #- openjdk6
   - openjdk7
-  - oraclejdk7     
+ # - oraclejdk7     
   #- oraclejdk8
 env:
   - APP_NAME=qhodeheroku2
@@ -12,10 +12,10 @@ matrix:
  # include:
  #   - jdk: openjdk7
   #    env: ship@=test
-  exclude:
-    - jdk: oraclejdk7
-      env:
-        - APP_NAME=qhodeheroku2  
+  #exclude:
+   # - jdk: oraclejdk7
+    #  env:
+     #   - APP_NAME=qhodeheroku2  
       #  - test1=genexec1
   allow_failures:
     - jdk: openjdk7
