--- a/shippable.yml
+++ b/shippable.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
   #- openjdk6
   - openjdk7
- # - oraclejdk7     
+  - oraclejdk7     
   #- oraclejdk8
 env:
   - APP_NAME=qhodeheroku2
@@ -19,7 +19,7 @@ matrix:
       #  - test1=genexec1
   allow_failures:
     - jdk: openjdk7
-
+    - jdk: oraclejdk7 
 build:
   #advancedReporting: true
   ci:
