--- a/shippable.yml
+++ b/shippable.yml
@@ -2,20 +2,21 @@ language: java
 
 jdk:
   #- openjdk6
-  - openjdk7
+  #- openjdk7
   - oraclejdk7     
-  #- oraclejdk8
+  - oraclejdk8
 env:
   - APP_NAME=qhodeheroku2
   #- test1=genexec1
 matrix:
- # include:
- #   - jdk: openjdk7
+  include:
+    - jdk: openjdk7
+      env: foo=fubu
   #    env: ship@=test
-  #exclude:
-   # - jdk: oraclejdk7
-    #  env:
-     #   - APP_NAME=qhodeheroku2  
+  exclude:
+    - jdk: oraclejdk8
+      env:
+        - APP_NAME=qhodeheroku2  
       #  - test1=genexec1
   allow_failures:
     - jdk: openjdk7
