--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: java
 
 jdk:
-  #- openjdk6
+  - openjdk6
   #- openjdk7
   - oraclejdk7     
   - oraclejdk8
@@ -20,16 +20,17 @@ matrix:
       #  - test1=genexec1
   allow_failures:
     - jdk: openjdk7
-    - jdk: oraclejdk7 
+   # - jdk: oraclejdk7 
 build:
   #advancedReporting: true
   ci:
     # Create folders for test and code coverage
     - mkdir -p shippable/codecoverage
-    - exit 1
+    #- exit 1
     - mvn install
     - cp -r target shippable/codecoverage
     - docker ps
+    - if [ "$SHIPPABLE_JDK_VERSION" == "" ]; then foobar; fi
     
   cache: true
  # cache_dir_list: 
