--- a/shippable.yml
+++ b/shippable.yml
@@ -31,7 +31,7 @@ build:
     - docker ps
     - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk7" ]; then foobar; fi
     
- # cache: false
+  cache: true
   cache_dir_list: 
     - $SHIPPABLE_BUILD_DIR/shippable.yml
 integrations:    
