--- a/shippable.yml
+++ b/shippable.yml
@@ -36,64 +36,64 @@ build:
   cache_dir_list: 
     - $SHIPPABLE_BUILD_DIR/shippable.yml
     
-integrations:    
-  notifications:
-    - integrationName: notify-slack 
-      type: slack
-      recipients:
-        - "#random" 
-        - "#rc-public" 
-        - "#rc-private"
-      on_start: always
-      on_success: always
-      on_failure: always      
+#integrations:    
+#  notifications:
+ #   - integrationName: notify-slack 
+  #    type: slack
+   #   recipients:
+    #    - "#random" 
+    #    - "#rc-public" 
+     #   - "#rc-private"
+     # on_start: always
+     # on_success: always
+     # on_failure: always      
       
-    - integrationName: email         
-      type: email        
-      recipients: 
-        - shiptest.rc.ow@gmail.com
-        - shiptest.rc.me@gmail.com
-      on_start: always
-      on_success: always 
-      on_failure: always 
+    #- integrationName: email         
+     # type: email        
+     # recipients: 
+      #  - shiptest.rc.ow@gmail.com
+      #  - shiptest.rc.me@gmail.com
+      #on_start: always
+      #on_success: always 
+      #on_failure: always 
        
      
-    - integrationName: irc    
-      type: irc
-      recipients:
-        - "chat.freenode.net#test-rc"
-        - "chat.freenode.net#test-alpha"
-      on_start: always
-      on_success: always      
-      on_failure: always   
+    #- integrationName: irc    
+     # type: irc
+     # recipients:
+      #  - "chat.freenode.net#test-rc"
+      #  - "chat.freenode.net#test-alpha"
+      #on_start: always
+      #on_success: always      
+      #on_failure: always   
     
-    - integrationName: notify-hipchat
-      type: hipchat
-      recipients:
-        - '#rc-private'
-        - '#rc-public'
-        - '@shiptestrcow'
-      on_start: always
-      on_success: always   
-      on_failure: always
+   # - integrationName: notify-hipchat
+    #  type: hipchat
+    #  recipients:
+ #       - '#rc-private'
+ #       - '#rc-public'
+ #       - '@shiptestrcow'
+ #     on_start: always
+ #     on_success: always   
+ #     on_failure: always
      
-    - integrationName: generic-webhook   #issue will get created in github samleNod project
-      type: webhook
-      payload:
-        - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
-        - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
-      on_start: always
-      on_success: always
-      on_failure: always   
+ #   - integrationName: generic-webhook   #issue will get created in github samleNod project
+ #     type: webhook
+ #     payload:
+ #       - title=Failure - $REPO_FULL_NAME - $BUILD_NUMBER
+ #       - body=Shippable Run $BUILD_NUMBER ($BUILD_URL) failed for $COMPARE_URL 
+ #     on_start: always
+ #     on_success: always
+ #     on_failure: always   
         
-    - integrationName: project-trigger #samplNod project in shiptest-rc-ow will trigger
-      type: webhook
-      payload:
+ #   - integrationName: project-trigger #samplNod project in shiptest-rc-ow will trigger
+ #     type: webhook
+ #     payload:
        # - BUILD_NUM=$SHIPPABLE_JOB_NUMBER 
-        - BUILD_NUM=$SHIPPABLE_BUILD_NUMBER
-        - FOO=FUBU
-        - GOO=GUBU
-      on_start: always
-      on_success: always
-      on_failure: always
+ #       - BUILD_NUM=$SHIPPABLE_BUILD_NUMBER
+ #       - FOO=FUBU
+ #       - GOO=GUBU
+ #     on_start: always
+ #     on_success: always
+ #     on_failure: always
  
