--- a/shippable.yml
+++ b/shippable.yml
@@ -1,26 +1,27 @@
 language: java
 
 jdk:
-  - openjdk6
+ # - openjdk6
   #- openjdk7 
   - oraclejdk7 
   - oraclejdk8
   
 env:
   - env=test1
-matrix:
+#matrix:
 #include this version with the env 
-  include:               
-    - jdk: openjdk7
-      env: foo=fubu
+ # include:               
+  #  - jdk: openjdk7
+   #   env: foo=fubu
 #excludes this version 
-  exclude:             
-    - jdk: oraclejdk8
-      env:
-        - env=test1 
+  
+  #exclude:             
+   # - jdk: oraclejdk8
+    #  env:
+     #   - env=test1 
 #allows failure for this version
-  allow_failures:
-    - jdk: oraclejdk7 
+  #allow_failures:
+   # - jdk: oraclejdk7 
     
 build:
   #advancedReporting: true   #by default adavanced reporting is true
