--- a/shippable.yml
+++ b/shippable.yml
@@ -20,8 +20,8 @@ matrix:
       env:
         - env=test1 
 #allows failure for this version
-  allow_failures:
-    - jdk: oraclejdk7 
+ # allow_failures:
+  #  - jdk: oraclejdk7 
 
 addons:
   firefox: "25.0"    
