--- a/shippable.yml
+++ b/shippable.yml
@@ -41,9 +41,9 @@ build:
     
     
 
-  cache: true
-  cache_dir_list: 
-    - $SHIPPABLE_BUILD_DIR/shippable.yml
+  #cache: true
+  #cache_dir_list: 
+   # - $SHIPPABLE_BUILD_DIR/shippable.yml
     
 integrations:    
   notifications:
