--- a/shippable.yml
+++ b/shippable.yml
@@ -15,13 +15,13 @@ matrix:
       env: foo=fubu
          
 #excludes this version 
-  exclude:             
-    - jdk: oraclejdk8
-      env:
-        - env=test1 
+  #exclude:             
+   # - jdk: oraclejdk8
+    #  env:
+     #   - env=test1 
 #allows failure for this version
-  allow_failures:
-    - jdk: oraclejdk7 
+ # allow_failures:
+ #   - jdk: oraclejdk7 
 
 addons:
   firefox: "25.0"    
@@ -34,7 +34,7 @@ build:
     #- java -version
     - cp -r target shippable/codecoverage
     - docker ps
-    - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk7" ]; then foobar; fi # to make oraclejdk7 fail and this version allows allow_failure
+  #  - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk7" ]; then foobar; fi # to make oraclejdk7 fail and this version allows allow_failure
     - lsb_release -a
     - docker --version
     - docker info
