--- a/shippable.yml
+++ b/shippable.yml
@@ -5,9 +5,9 @@ jdk:
   #- openjdk7    
   - oraclejdk7 
   - oraclejdk8
-  
-env:
-  - env=test1
+  #
+#env:
+ # - env=test1
 #matrix:
 #include this version with the env 
  # include:               
