--- a/shippable.yml
+++ b/shippable.yml
@@ -53,6 +53,7 @@ integrations:
       recipients: 
         - shiptest.rc.ow@gmail.com
         - shiptest.rc.me@gmail.com
+        - sreyaj10@gmail.com
       sendLogsInEmail : true
       on_start: always
       on_success: always 
