--- a/shippable.yml
+++ b/shippable.yml
@@ -23,8 +23,8 @@ jdk:
  # allow_failures:
  #   - jdk: oraclejdk7 
 
-addons:
-  firefox: "25.0"    
+#addons:
+ # firefox: "25.0"    
 build:
   #advancedReporting: true   #by default adavanced reporting is true
   ci:
