--- a/shippable.yml
+++ b/shippable.yml
@@ -5,26 +5,26 @@ jdk:
   #- openjdk7    
   - oraclejdk7 
   - oraclejdk8
-  #
-#env:
- # - env=test1
-#matrix:
+  
+env:
+  - env=test1
+matrix:
 #include this version with the env 
- # include:               
-  #  - jdk: openjdk7
-   #   env: foo=fubu
+  include:               
+    - jdk: openjdk7
+      env: foo=fubu
          
 #excludes this version 
-  #exclude:             
-   # - jdk: oraclejdk8
-    #  env:
-     #   - env=test1 
+  exclude:             
+    - jdk: oraclejdk8
+      env:
+        - env=test1 
 #allows failure for this version
- # allow_failures:
- #   - jdk: oraclejdk7 
+  allow_failures:
+    - jdk: oraclejdk7 
 
-#addons:
- # firefox: "25.0"    
+addons:
+  firefox: "25.0"    
 build:
   #advancedReporting: true   #by default adavanced reporting is true
   ci:
@@ -34,28 +34,47 @@ build:
     #- java -version
     - cp -r target shippable/codecoverage
     - docker ps
-  #  - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk7" ]; then foobar; fi # to make oraclejdk7 fail and this version allows allow_failure
+    - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk7" ]; then foobar; fi # to make oraclejdk7 fail and this version allows allow_failure
     - lsb_release -a
     - docker --version
     - docker info
     
     
 
-  #cache: true
-  #cache_dir_list: 
-   # - $SHIPPABLE_BUILD_DIR/shippable.yml
+  cache: true
+  cache_dir_list: 
+    - $SHIPPABLE_BUILD_DIR/shippable.yml
     
 integrations:    
   notifications:
-         
+    
+       
     - integrationName: email         
       type: email        
       recipients: 
         - shiptest.rc.ow@gmail.com
         - shiptest.rc.me@gmail.com
-        - sreyaj10@gmail.com
       sendLogsInEmail : true
       on_start: always
       on_success: always 
       on_failure: always 
- 
+      
+  #  - integrationName: irc1    
+  #    type: irc
+  #    recipients:
+  #      - "chat.freenode.net#test-rc"
+  #      - "chat.freenode.net#test-alpha"
+  #    on_start: always
+  #    on_success: always      
+  #    on_failure: always      
+     
+    - integrationName: irc  
+      type: irc
+      recipients:
+        - "webchat.irchighway.net#irc-three"
+        - "webchat.irchighway.net#test-rc"
+      on_start: always
+      on_success: always      
+      on_failure: always   
+    
+   
