--- a/shippable.yml
+++ b/shippable.yml
@@ -47,14 +47,14 @@ build:
     
 integrations:    
   notifications:
-    
+   
        
     - integrationName: email         
       type: email        
       recipients: 
         - shiptest.rc.ow@gmail.com
         - shiptest.rc.me@gmail.com
-      sendLogsInEmail : true
+      #sendLogsInEmail : true
       on_start: always
       on_success: always 
       on_failure: always 
@@ -77,4 +77,4 @@ integrations:
       on_success: always      
       on_failure: always   
     
-   
+  
