--- a/shippable.yml
+++ b/shippable.yml
@@ -8,20 +8,20 @@ jdk:
   
 env:
   - env=test1
-#matrix:
+matrix:
 #include this version with the env 
- # include:               
-  #  - jdk: openjdk7
-   #   env: foo=fubu
+  include:               
+    - jdk: openjdk7
+      env: foo=fubu
 #excludes this version 
   
-  #exclude:             
-   # - jdk: oraclejdk8
-    #  env:
-     #   - env=test1 
+  exclude:             
+    - jdk: oraclejdk8
+      env:
+        - env=test1 
 #allows failure for this version
-  #allow_failures:
-   # - jdk: oraclejdk7 
+  allow_failures:
+    - jdk: oraclejdk9
     
 build:
   #advancedReporting: true   #by default adavanced reporting is true
@@ -31,32 +31,32 @@ build:
     - mvn install
     - cp -r target shippable/codecoverage
     - docker ps
-   # - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk7" ]; then foobar; fi # to make oraclejdk7 fail and this version allows allow_failure
+    - if [ "$SHIPPABLE_JDK_VERSION" == "oraclejdk9" ]; then foobar; fi # to make oraclejdk7 fail and this version allows allow_failure
     
   cache: true
   cache_dir_list: 
     - $SHIPPABLE_BUILD_DIR/shippable.yml
     
-#integrations:    
-#  notifications:
- #   - integrationName: notify-slack 
-  #    type: slack
-   #   recipients:
-    #    - "#random" 
-    #    - "#rc-public" 
-     #   - "#rc-private"
-     # on_start: always
-     # on_success: always
-     # on_failure: always      
+integrations:    
+  notifications:
+    - integrationName: notify-slack 
+      type: slack
+      recipients:
+        - "#random" 
+        - "#rc-public" 
+        - "#rc-private"
+      on_start: always
+      on_success: always
+      on_failure: always      
       
-    #- integrationName: email         
-     # type: email        
-     # recipients: 
-      #  - shiptest.rc.ow@gmail.com
-      #  - shiptest.rc.me@gmail.com
-      #on_start: always
-      #on_success: always 
-      #on_failure: always 
+    - integrationName: email         
+      type: email        
+      recipients: 
+        - shiptest.rc.ow@gmail.com
+        - shiptest.rc.me@gmail.com
+      on_start: always
+      on_success: always 
+      on_failure: always 
        
      
     #- integrationName: irc    
@@ -68,15 +68,15 @@ build:
       #on_success: always      
       #on_failure: always   
     
-   # - integrationName: notify-hipchat
-    #  type: hipchat
-    #  recipients:
- #       - '#rc-private'
- #       - '#rc-public'
- #       - '@shiptestrcow'
- #     on_start: always
- #     on_success: always   
- #     on_failure: always
+    - integrationName: notify-hipchat
+      type: hipchat
+      recipients:
+        - '#rc-private'
+        - '#rc-public'
+        - '@shiptestrcow'
+      on_start: always
+      on_success: always   
+      on_failure: always
      
  #   - integrationName: generic-webhook   #issue will get created in github samleNod project
  #     type: webhook
